tests/NormalTests/paczka1/small_fuzzy/80609772.err
Error in line 6: jjHXe S72 54,4
Error in line 13: lwXF3iHTWsg S199 97,6
